fix: :bug: fixing register endpoint
